2008-10-26  Johan Dahlin  <jdahlin@async.com.br>

	Support for Python 3.0, drop support for pre-2.0.
	* lib/py-compile: Do not import string; use sys.stdout.write
	instead of print, files.split instead of string.split.
	* m4/python.m4 (AM_PATH_PYTHON): Also look for python3 and
	phython3.0; do not look for python1.5.  Use sys.stdout.write.
	(AM_PYTHON_CHECK_VERSION): Do not use string; adjust to xrange
	removal in Python 3.0, and changed semantics of map.
	* doc/automake.texi (Python, Hard-Coded Install Paths): Update
	Python versions mentioned in the manual, using 2.5 everywhere.
	* NEWS, THANKS: Update.

2008-10-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/Channels.pm (@chain): Drop unused variable.

	Cleanup of per-input global variables in automake.in.
	* automake.in ($output_vars, $output_all, $output_header)
	($output_rules, $output_trailer): Fix comment, and sort
	declarations in the order they will appear in the output.
	($all_target): Unused variable, remove.
	(Variables not reset by &initialize_per_input.): New section,
	clarify that %am_file_cache is not reset.
	(initialize_per_input): Reset $am_file_name, $am_relative_dir,
	$in_file_name, $relative_dir, and $topsrcdir to `undef' rather
	than the empty string; $topsrcdir was not reset at all.  Sort
	remaining variables in the same order as in the section
	`Variables reset by &initialize_per_input'.

	Let stderr output end up on fd 2 in testsuite.
	* tests/defs.in (AUTOMAKE_run): Output recorded stderr on file
	descriptor 2.
	* tests/getopt.test: Fix erroneous multiple redirection,
	uncovered by above change.

2008-10-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix DisjConditions module to be thread-safe for perl >= 5.7.2.
	Self-hashes of blessed references are not correctly transported
	through thread creation.  This patch fixes that by recreating
	the hashes upon thread creation with a CLONE special subroutine,
	which is automatically invoked by new enough Perl versions.