@@ -280,6 +280,7 @@ Rusty Ballinger		rusty@rlyeh.engr.sgi.com
 Ryan T. Sammartino	ryants@shaw.ca
 Sam Hocevar		sam@zoy.org
 Sam Sirlin		sam@kalessin.jpl.nasa.gov
+Sam Steingold		sds@gnu.org
 Sander Niemeijer	niemeijer@science-and-technology.nl
 Santiago Vila		sanvila@unex.es
 Scott James Remnant	scott@netsplit.com
