@@ -222,6 +222,7 @@ depend.test \
 depend2.test \
 depend3.test \
 depend4.test \
+depend5.test \
 destdir.test \
 dirforbid.test \
 dirlist.test \
