@@ -115,6 +115,10 @@ Bugs fixed in 1.10a:
   - For nobase_*_LTLIBRARIES with nonempty directory components, the
     correct `-rpath' argument is used now.
 
+  - `config.status --file=Makefile depfiles' now also works with the
+    extra quoting used internally used by Autoconf 2.62 and newer
+    (it used to work only without the `--file=' bit).
+
 * Bugs introduced by 1.10:
 
   - Fix output of dummy dependency files in presence of post-processed
