@@ -1,3 +1,14 @@
+2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix 'config.status --file=... depfiles' with new Autoconf.
+	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Eval
+	$CONFIG_STATUS contents if we detect the quoting used by
+	Autoconf 2.62 and newer for --file=.
+	* tests/depend5.test: New test.
+	* tests/Makefile.am: Update.
+	* NEWS, THANKS: Update.
+	Report by Sam Steingold against gnulib.
+
 2008-10-26  Johan Dahlin  <jdahlin@async.com.br>
 
 	Support for Python 3.0, drop support for pre-2.0.
